# archgw

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  README-MONOREPO.md  README.md  archgw.code-workspace  build_filter_image.sh  index.html  objects.inv  package-lock.json  package.json  search.html  searchindex.js  sitemap.xml  turbo.json
.github/workflows/: docker-push-main.yml  e2e_archgw.yml  e2e_test_currency_convert.yml  e2e_test_preference_based_routing.yml  e2e_tests.yml  ghrc-push-main.yml  plano_tools_tests.yml  publish-plano-cli.yml  publish-pypi.yml  rust_tests.yml  validate_arch_config.yml
_static/: documentation_options.js
apps/docs/: biome.json  next.config.ts  package.json  tsconfig.json
apps/www/: .gitignore  next.config.ts  package.json  sanity.config.ts
arch/: Dockerfile  README.md  arch_config_schema.yaml  docker-compose.dev.yaml  envoy.template.yaml  supervisord.conf
arch-router-test/: arch_config.yaml
arch/tools/: TESTING.md  publish_cli.sh  pyproject.toml
arch/tools/cli/: config_generator.py  core.py  docker_cli.py  main.py  utils.py
arch/tools/test/: test_config_generator.py
build_with_arch/: agent.html  multi_turn.html  rag.html
cli/: pyproject.toml
cli/planoai/: main.py
cli/test/: test_config_generator.py
concepts/: agents.html  filter_chain.html  listeners.html  llm_provider.html  prompt_target.html
concepts/llm_providers/: client_libraries.html  llm_providers.html  model_aliases.html  supported_providers.html
concepts/tech_overview/: error_target.html  listener.html  model_serving.html  prompt.html  request_lifecycle.html  tech_overview.html  terminology.html  threading_model.html
crates/: Cargo.toml
crates/brightstaff/: Cargo.toml
crates/brightstaff/src/: lib.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: configuration.rs  consts.rs  routing.rs
crates/hermesllm/: Cargo.toml  README.md
crates/hermesllm/src/: lib.rs
crates/llm_gateway/src/: stream_context.rs
crates/llm_gateway/tests/: integration.rs
crates/model_registry/: Cargo.toml
crates/model_registry/src/: definitions.rs  discovery.rs  error.rs  fallback.rs  lib.rs  model_info.rs  registry.rs
crates/oauth_gateway/: Cargo.toml
crates/oauth_gateway/src/: lib.rs  main.rs
crates/oauth_gateway/src/auth/: oauth.rs  token_store.rs
crates/oauth_gateway/src/server/: mod.rs  oauth_handlers.rs
crates/prompt_gateway/src/: http_context.rs  stream_context.rs  tools.rs
demos/acm_k8s/: docker-compose.yaml
demos/llm_routing/: run_demo.sh
demos/samples_java/weather_forcecast_service/: README.md  docker-compose.yaml
demos/samples_python/currency_exchange/: arch_config.yaml
demos/samples_python/multi_turn_rag_agent/: docker-compose.yaml  run_demo.sh
demos/samples_python/stock_quote/: docker-compose.yaml  run_demo.sh
demos/samples_python/weather_forecast/: Dockerfile  arch_config.yaml  docker-compose-honeycomb.yaml  docker-compose-jaeger.yaml  docker-compose-logfire.yaml  docker-compose-signoz.yaml  docker-compose.yaml  pyproject.toml  response.tx  response_chat.txt  response_chat_reasoning.txt  run_demo.sh
demos/shared/test_runner/: pyproject.toml  run_demo_tests.sh
demos/use_cases/: README.md
demos/use_cases/claude_code/: README.md  config.yaml
demos/use_cases/claude_code_router/: config.yaml
demos/use_cases/llm_routing/: arch_config.yaml  run_demo.sh
demos/use_cases/mcp_filter/: README.md  arch_config.yaml  docker-compose.yaml  pyproject.toml
demos/use_cases/model_alias_routing/: README.md  arch_config_with_aliases.yaml  model_alias.py  pyproject.toml  run_tests.sh
demos/use_cases/model_choice_with_test_harness/: README.md
demos/use_cases/newsletter_is_model_choice_the_free_lunch_in_ai/: README.md  run_demo.sh
demos/use_cases/ollama/: docker-compose.yaml  docker-compose_honeycomb.yaml
demos/use_cases/preference_based_routing/: README.md  test_router_endpoint.rest
demos/use_cases/rag_agent/: Dockerfile  README.md  arch_config.yaml  docker-compose.yaml  mcp_query.rest  pyproject.toml  start_agents.sh  test.hurl  test.rest
demos/use_cases/spotify_bearer_auth/: docker-compose.yaml
demos/use_cases/travel_agents/: README.md  arch_config.yaml  test.rest
demos/use_cases/travel_booking/: README.md  arch_config.yaml  pyproject.toml  start_agents.sh  test.rest
docs/: MCP_AGENT_INTEGRATION.md  MCP_QUICK_START.md
docs/source/: conf.py  index.rst
docs/source/concepts/: agents.rst  filter_chain.rst  llm_provider.rst  signals.rst
docs/source/get_started/: overview.rst  quickstart.rst
docs/source/guides/: function_calling.rst  llm_router.rst  oauth_authentication.md  orchestration.rst  prompt_guard.rst  state.rst
docs/source/resources/: deployment.rst
get_started/: intro_to_arch.html  intro_to_plano.html  overview.html  quickstart.html
guides/: agent_routing.html  function_calling.html  llm_router.html  orchestration.html  prompt_guard.html  state.html
guides/observability/: access_logging.html  monitoring.html  observability.html  tracing.html
includes/: llms.txt
model_server/: README.md  pyproject.toml
model_server/src/: cli.py  main.py
model_server/src/commons/: utils.py
model_server/src/core/: function_calling.py  guardrails.py
model_server/src/core/utils/: hallucination_utils.py  model_utils.py
model_server/tests/: test_app.py
resources/: configuration_reference.html  deployment.html  llms_txt.html
resources/tech_overview/: model_serving.html  request_lifecycle.html  tech_overview.html  threading_model.html
tests/archfc_monitor/: README.md  archfc_monitor.py  pyproject.toml
tests/archgw/: docker-compose.yaml  pyproject.toml
tests/e2e/: arch_config_memory_state_v1_responses.yaml  docker-compose.yaml  pyproject.toml  run_e2e_tests.sh  test_model_alias_routing.py  test_openai_responses_api_client.py  test_prompt_gateway.py
tests/modelserver/: test_hallucination.py  test_hallucination_data.yaml  test_success_data.yaml
www/: package-lock.json  package.json
www/src/app/: globals.css  layout.tsx  page.tsx
www/src/components/: AsciiDiagram.tsx  Footer.tsx  (+11 more)
(+150 files in other folders)
