[project]
name = "archgw"
version = "0.3.15"
description = "Python-based CLI tool to manage Arch Gateway."
authors = [
    { name = "Katanemo Labs, Inc." }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "archgw_modelserver>=0.3.15",
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "jsonschema>=4.23.0",
    "setuptools==75.5.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
archgw = "cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.pytest.ini_options]
addopts = ["-v"]
