[package]
name = "model_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "1"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }

common = { path = "../common" }
hermesllm = { path = "../hermesllm" }
