[tool.poetry]
name = "model_alias_tests"
version = "0.0.1"
description = "Model alias tests for archgw"
authors = ["Katanemo Labs, Inc <info@katanemo.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.66.0"
openai = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[tool.pytest.ini_options]
python_files = ["test*.py", "model_alias.py"]
addopts = ["-v", "-s"]
